Recipe card title spacing fix

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -356,7 +356,7 @@ button:hover{
     color: #fff;
     width: 100%;
     margin-bottom: 1.25rem;
-    line-height: 4rem;
+    line-height: 2rem;
 }
 
 .recipe-hero-img{
@@ -383,7 +383,7 @@ button:hover{
     font-size: 1.75rem;
     font-family: var(--Lato);
     vertical-align: middle;
-    margin: 0;
+    margin: 0.75rem 0;
 }
 
 /*
